# access-permission-approval

./: .gitignore  Makefile  README.md  pyproject.toml
config/: default.yaml  sample.yaml
docs/: model_card.md
notebooks/: access_permission_writeup.ipynb
scripts/: pipeline.py  predict.py  report.py  serve.py  train.py
src/access_perm/: __init__.py  config.py  data.py  features.py  modeling.py  monitoring.py  pipeline.py  predict.py  report.py  reporting.py  service.py  tracking.py  train.py  validation.py
tests/: test_features.py  test_modeling.py  test_service_monitoring.py
tests/fixtures/small/: apps_metadata.csv  interactions.csv  submission.csv  users_metadata.csv
